# OS

./: README.md
Hometask 2/Linux/my_cpp_project/: CMakeLists.txt
Hometask 2/Linux/my_cpp_project/src/: Matrix.cpp  Matrix.h  PthreadMultiplier.cpp  PthreadMultiplier.h  ThreadMultiplier.cpp  ThreadMultiplier.h  main.cpp
Hometask 2/Windows/matrix1/: Matrix.cpp  Matrix.h  PthreadMultiplier.cpp  PthreadMultiplier.h  ThreadMultiplier.cpp  ThreadMultiplier.h  WindowsMultiplier.cpp  WindowsMultiplier.h  matrix1.cpp  matrix1.vcxproj  matrix1.vcxproj.filters
Hometask 2/Windows/matrix1/x64/Debug/: matrix.obj.enc  matrix1.exe.recipe  matrix1.obj.enc  vc143.idb
Hometask 2/Windows/matrix1/x64/Debug/matrix1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  matrix1.lastbuildstate
Homework 3/: BufferedChannel.h
Homework1/Linux/: Number.cpp  Number.h  Vector.cpp  Vector.h  main.cpp  main_app
Homework1/Windows/: Librrs.sln
Homework1/Windows/DL/: DL.vcxproj  DL.vcxproj.filters  Vector.cpp  Vector.h
Homework1/Windows/DL/x64/Debug/: DL.dll.recipe  DL.ilk  vc143.idb
Homework1/Windows/DL/x64/Debug/DL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
Homework1/Windows/Libraries/: Libraries.vcxproj  Number.cpp  Number.h
Homework1/Windows/TEST/: TEST.vcxproj  main.cpp
Homework1/Windows/TEST/x64/Debug/: TEST.exe.recipe  TEST.ilk  vc143.idb
Homework1/Windows/x64/Debug/: DL.exp  DL.lib  SL.idb  SL.lib  TEST.exp  TEST.lib
(+16 files in other folders)
